--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3417,7 +3417,7 @@ MOBILE STYLES BELOW
     background-color: #fff !important;
     overflow-y: auto !important;   /* If content is tall, scroll */
   }
-.sAsCont.sAs{
+.sAs{
 	border: unset!important;
 	width: unset !important;
 	
