--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3412,7 +3412,7 @@ MOBILE STYLES BELOW
     left: 0 !important;
     top: 0 !important;
     width: 100% !important;
-    height: calc(100vh - 135px)!important;
+    height: calc(100dvh - 135px)!important;
     z-index: 9999 !important;      /* On top of everything */
     background-color: #fff !important;
     overflow-y: auto !important;   /* If content is tall, scroll */
