--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3438,8 +3438,8 @@ MOBILE STYLES BELOW
 .chat_block{
 	grid-template-columns:100% !important;
 }
-.grid-template-columns{
-	margin-bottom: 500px !important;
+.shell15_wrapper{
+	margin-bottom: 200px !important;
 }
 }
 
