--- a/Ai-Agent-UI.css
+++ b/Ai-Agent-UI.css
@@ -3172,7 +3172,6 @@ margin: 0rem !important;
     align-items: center;
     gap: 14px; /* Space between icon and option button */
     margin-left: 8%;
-    transform: translateX(-35px);
   }
   
 /* Clipboard icon default style */
@@ -3438,4 +3437,30 @@ MOBILE STYLES BELOW
 .shell15_wrapper{
 	margin-bottom: 200px !important;
 }
+}
+
+.chat_multi-choice-send {
+  filter: drop-shadow(0 2px 5px #0000001f);
+  cursor: pointer;
+  background-color: #c0e6f5;
+  border: 1px solid #62b7d9;
+  border-radius: 14px;
+  transition: all .2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* Fixed square dimensions */
+  width: 50px;
+  height: 50px;
+}
+
+.chat_multi-choice-send:hover {
+  filter: drop-shadow(0 6px 7px #0000004d);
+  border-color: #271f55;
+  transform: translate(0, -3px);
+}
+
+.chat_multi-choice-send svg {
+  transform: rotate(-53deg) scale(0.6);
+  margin-left:3px;
 }
